noinst_PROGRAMS = hello_glist	\
				  hello_gdbus	\
				  $(NULL)

hello_glist_CFLAGS = $(GLIB2_CFLAGS)	\
					 $(NULL)
hello_glist_LDADD = $(GLIB2_LIBS)	\
				    $(NULL)

hello_gdbus_CFLAGS = $(GLIB2_CFLAGS)	\
					 $(GIO2_CFLAGS)	\
					 $(NULL)
hello_gdbus_LDADD = $(GLIB2_LIBS)   \
					$(GIO2_LIBS)	\
					$(NULL)
